# winlofi

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  build.bat  build.sh  meson.build
src/: CMakeLists.txt  main.c  main.cxx  meson.build
src/res/: resource.h  winlofi.rc
